<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweet</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="this_is_my_tweet">this is my tweet</string>
    <string name="avatar_of_user">avatar of user</string>
    <string name="retweet_button">retweet button</string>
    <string name="comment_icon">comment icon</string>
    <string name="like_icon">like icon</string>
    <string name="upload_icon">upload_icon</string>
    <string name="create_tweet_button" />
    <string name="what_s_happening">What\'s happening?</string>
    <string name="tweet">Tweet</string>
    <string name="number_of_retweets">number of retweets</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>