<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_layout"
    android:padding="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvNameTweeter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="#000000"
            android:textSize="14sp"
            tools:text="chicken_nugget123" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/avatar_of_user"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="chicken_nugget123" />

        <TextView
            android:id="@+id/tvBody"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvScreenName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:autoLink="all"
            android:linksClickable="true"
            android:text="@string/this_is_my_tweet"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvScreenName"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/tvTimeDifference"
            android:layout_toEndOf="@+id/tvName"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="16sp"
            tools:text="\@chicken_nugget123" />

        <ImageView
            android:id="@+id/comment_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@+id/tvBody"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:contentDescription="@string/comment_icon"
            app:srcCompat="@drawable/ic_vector_comment_stroke" />

        <ImageView
            android:id="@+id/retweet_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@+id/tvBody"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/comment_icon"
            android:contentDescription="@string/retweet_button"
            app:srcCompat="@drawable/ic_vector_retweet_stroke" />

        <ImageView
            android:id="@+id/favorite_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@+id/tvBody"
            android:layout_marginStart="65dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/retweet_icon"
            android:contentDescription="@string/like_icon"
            app:srcCompat="@drawable/ic_vector_heart_stroke" />

        <ImageView
            android:id="@+id/upload_icon"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_below="@+id/tvBody"
            android:layout_marginStart="60dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/favorite_icon"
            android:contentDescription="@string/upload_icon"
            app:srcCompat="@drawable/ic_upload_svgrepo_com" />

        <TextView
            android:id="@+id/tvTimeDifference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:textSize="16sp"
            tools:text="32m" />

        <TextView
            android:id="@+id/tvRetweetCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBody"
            android:layout_marginStart="2dp"
            android:layout_marginTop="11dp"
            android:layout_toEndOf="@+id/retweet_icon"
            android:contentDescription="@string/number_of_retweets"
            android:textColor="@color/medium_gray"
            android:textSize="12sp"
            tools:text="30" />

        <TextView
            android:id="@+id/tvFavoriteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBody"
            android:layout_marginStart="2dp"
            android:layout_marginTop="11dp"
            android:layout_toEndOf="@+id/favorite_icon"
            android:contentDescription="@string/number_of_retweets"
            android:textColor="@color/medium_gray"
            android:textSize="12sp"
            tools:text="30" />
    </RelativeLayout>
</LinearLayout>